// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation.missingValue missingDictionaryEntryValue provides a correct message 1`] = `
"The dictionary entry 'required' must contain a value.

   Line | Content
      1 | 
      2 |         dictionary:
 >    3 |         required =
      4 |       
"
`;

exports[`validation.missingValue missingDictionaryEntryValue provides correct selection metadata 1`] = `
Array [
  Array [
    2,
    18,
  ],
  Array [
    2,
    18,
  ],
]
`;

exports[`validation.missingValue missingFieldValue with empty appendices provides a correct message 1`] = `
"The field 'required' must contain a value.

   Line | Content
      1 | 
 >    2 |           required:
 *    3 |           |
 *    4 | 
 *    5 |           |
      6 |         
"
`;

exports[`validation.missingValue missingFieldValue with empty appendices provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    19,
  ],
  Array [
    4,
    11,
  ],
]
`;

exports[`validation.missingValue missingFieldValue without empty appendices provides a correct message 1`] = `
"The field 'required' must contain a value.

   Line | Content
      1 | 
 >    2 |           required:
      3 |         
"
`;

exports[`validation.missingValue missingFieldValue without empty appendices provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    19,
  ],
  Array [
    1,
    19,
  ],
]
`;

exports[`validation.missingValue missingListItemValue provides a correct message 1`] = `
"The list 'values required' may not contain empty items.

   Line | Content
   ...
      2 |         values required:
      3 |         - value
 >    4 |         -
      5 |       
"
`;

exports[`validation.missingValue missingListItemValue provides correct selection metadata 1`] = `
Array [
  Array [
    3,
    9,
  ],
  Array [
    3,
    9,
  ],
]
`;
